--- a/240520/todo/package.json
+++ b/240520/todo/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "coinproject01",
+  "name": "todo",
   "version": "0.1.0",
   "private": true,
   "type": "module",
   "dependencies": {
-    "@tanstack/react-query": "^5.36.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +15,8 @@
     "@types/styled-components": "^5.1.34",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.4",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
